--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,10 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "test": "NODE_ENV=testing jest --forceExit --detectOpenHandles  --silent",
+    "test": "jest --forceExit --detectOpenHandles  --silent",
+    "test:watch": "jest --forceExit --detectOpenHandles --silent --watch",
     "test-routes": "npm test -t router",
-    "test-models": "npm test -t model",
     "test-controllers": "npm test -t controllers",
-    "test-auth": "npm test -t Authentication:",
     "dev": "nodemon --exec npm run restart",
     "restart": "rimraf dist && npm run build && npm run start",
     "start": "node dist/index.js"
@@ -54,7 +53,6 @@
     "verbose": true,
     "testURL": "http://localhost/",
     "testEnvironment": "node",
-    "setupTestFrameworkScriptFile": "<rootDir>/test-db-setup.js",
     "testPathIgnorePatterns": [
       "dist/"
     ],
