--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@zeit/next-sass": "^1.0.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^23.4.2",
@@ -44,6 +45,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "jest": "^23.6.0",
     "mock-req-res": "^1.0.2",
+    "node-sass": "^4.13.1",
     "nodemon": "^1.18.3",
     "prettier": "^1.15.2",
     "rimraf": "^2.6.2",
