--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "author": "Greg Almeida <greg.almeidasilva@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --out-dir dist",
+    "build": "npm test && babel src --out-dir dist",
     "test": "jest --forceExit --detectOpenHandles  --silent",
     "test:watch": "jest --forceExit --detectOpenHandles --silent --watch",
     "test-routes": "npm test -t router",
@@ -15,6 +15,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "axios": "^0.19.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
