--- a/ui-ssr/package.json
+++ b/ui-ssr/package.json
@@ -2,19 +2,23 @@
   "name": "meli-ssr",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "test": "jest --watch",
+    "dev": "node server.js",
+    "build": "npm test && next build",
+    "start": "NODE_ENV=production node server.js",
+    "test": "jest --forceExit --detectOpenHandles  --silent",
     "test:ci": "jest --ci"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "loaders.css": "^0.1.2",
     "next": "^9.2.2",
     "next-fonts": "^1.0.3",
@@ -34,8 +38,13 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "@zeit/next-sass": "^1.0.1",
     "babel-jest": "^25.1.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "node-sass": "^4.13.1",
